Moved the login area to the center of the page and fixed some overflow issiues

--- a/app/assets/stylesheets/_login.scss
+++ b/app/assets/stylesheets/_login.scss
@@ -3,12 +3,19 @@
 	background: #f1f1f1;
 	width: 100%;
 	height: 100%;
-	position: relative;
 	margin: 0;
 	padding: 0;
 	top: 0;
 	left: 0;
+	overflow: auto;
 	h1 {
 		font-size: 5em;
 	}
+}
+
+.admin {
+	display: block;
+	width: 40%;
+	margin: 5em auto;
+	position: relative;
 }
